crates/ars-i18n/tests/ui/translate_on_struct.rs
use ars_i18n::Translate;

#[derive(Translate)]
#[translate(fallback = "en")]
struct Text;

fn main() {}
